Deep, deep review and polish
shiny

--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -30,8 +30,7 @@ These changes improve interoperability with Ethereum and other EVM-based network
 
 All `BASEFEE` revenue is redirected to the **Olympia Treasury** (ECIP-1112), an immutable smart contract governed by on-chain proposals submitted through **Olympia DAO** (ECIP-1113). Proposal execution and fiat interfacing are supported by the **Ethereum Classic DAO LLC**, a Wyoming-registered legal wrapper that performs administrative actions under binding instructions from on-chain governance, without discretionary control.
 
-
-This upgrade explicitly excludes changes related to Ethereum’s Proof-of-Stake transition, including validator operations and beacon-chain-based randomness, which are not applicable to Ethereum Classic. Implementation requires coordinated deployment across client software and node operators, with block heights to be finalized for both **Mordor Testnet** and **Mainnet** activation.
+This upgrade explicitly excludes changes related to Ethereum’s Proof-of-Stake transition, including validator operations and beacon-chain-based randomness, which are not applicable to Ethereum Classic. Implementation requires coordinated deployment across client software and node operators, with block heights to be finalized for both **Mordor Testnet** and **Mainnet** activation. Olympia DAO does not launch with a governance token. The system supports future upgrades to more decentralized governance models, including quadratic voting, veOLY staking, and soulbound token delegation (see ECIP-1113).
 
 ### EIP Summaries and Expected Action
 
@@ -72,7 +71,9 @@ By adopting these enhancements, Ethereum Classic gains four key benefits:
 
 Together, these changes reinforce Ethereum Classic’s position as a secure, decentralized, and developer-friendly Proof-of-Work smart contract platform.
 
-While EIP-1559 originated on Ethereum, its inclusion here does not violate Ethereum Classic’s principles of immutability or censorship resistance. It is an optional transaction format that improves gas predictability, enables sustainable protocol funding, and aligns incentives — all without changing historical state or requiring trust in centralized actors.
+While EIP-1559 originated on Ethereum, its inclusion here does not violate Ethereum Classic’s principles of immutability or censorship resistance. It is an optional transaction format that improves gas predictability, enables sustainable protocol funding, and aligns incentives — all without changing historical state or requiring trust in centralized actors. 
+
+Off-chain execution, fiat handling, and administrative duties are performed by the Ethereum Classic DAO LLC — a legally registered entity that operates under binding instructions from Olympia DAO, as defined in ECIP-1114.
 
 ### Specification
 
@@ -108,7 +109,7 @@ function finalizeBlock(...) internal {
 }
 ```
 
-> 🔒 **Consensus-critical logic**: This redirection is enforced within the client’s block finalization process and **cannot be bypassed or altered** without a hard fork. The `BASEFEE` is transferred to the Olympia Treasury at the protocol level before miner rewards are issued.
+🔒 **Consensus-critical logic**: This redirection is enforced within the client’s block finalization process and **cannot be bypassed or altered** without a hard fork. The `BASEFEE` is transferred to the Olympia Treasury at the protocol level before miner rewards are issued.
 
 No additional EVM changes, consensus rules, or opcodes are introduced in this upgrade.
 
