--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -21,7 +21,7 @@ This ECIP specifies the deployment of the **Olympia Treasury**, a protocol-level
 
 The Olympia Treasury serves as an immutable, externally auditable funding vault for Ethereum Classic. It accumulates protocol-level fee revenue and is designed to interoperate securely with a permissionless governance layer (ECIP-1113). Disbursements are executed exclusively through on-chain proposals approved by Olympia DAO.
 
-This treasury mechanism introduces a transparent, non-inflationary funding model to support client maintenance, protocol development, infrastructure, and ecosystem growth—without reliance on trusted intermediaries. This architecture draws on successful precedents from EVM-compatible networks such as Ronin, Celo, and Mantle, which redirect `BASEFEE` or sequencer revenue into DAO-governed treasuries to fund public goods.
+This treasury mechanism introduces a transparent, non-inflationary funding model to support client maintenance, protocol development, infrastructure, and ecosystem growth—without reliance on trusted intermediaries. This architecture draws on successful precedents from EVM-compatible networks such as Ronin, Celo, and Mantle, which redirect `BASEFEE` or sequencer revenue into DAO-governed treasuries to fund public goods. Off-chain fiat interfacing and administrative execution are supported by the Ethereum Classic DAO LLC, a legally registered entity that operates under binding instructions from Olympia DAO (see ECIP-1114).
 
 ### Motivation
 
@@ -47,7 +47,6 @@ The Olympia Treasury contract SHALL be deployed at a fixed, deterministic addres
   _(Final address to be derived via `CREATE` or `CREATE2` and published prior to testnet deployment in coordination with client implementers.)_
 
 The address derivation MUST be reproducible across all client implementations to ensure deterministic deployment and cross-client consensus integrity.
-The address derivation MUST use a deterministic method (e.g., `CREATE2`) and be reproducible across all client implementations. The final address SHALL be published in coordination with Core-Geth.
 
 #### Example: CREATE2 Address Derivation
 
@@ -57,14 +56,15 @@ The Olympia Treasury contract address SHALL be deterministically derived using t
 // SPDX-License-Identifier: MIT
 pragma solidity ^0.8.20;
 
+// Derive the deterministic address of the Olympia Treasury contract using CREATE2
 address treasuryAddress = address(
     uint160(uint256(
         keccak256(
             abi.encodePacked(
-                bytes1(0xff),
-                deployerAddress,
-                salt,
-                keccak256(bytecode)
+                bytes1(0xff),         // Required prefix for CREATE2
+                deployerAddress,      // Known deployer (e.g., DAO multisig)
+                salt,                 // Fixed constant (e.g., bytes32("OLYMPIA_VAULT"))
+                keccak256(bytecode)  // Hash of compiled contract bytecode
             )
         )
     ))
@@ -185,7 +185,9 @@ The Treasury contract SHALL expose a restricted interface callable only by a des
 - On-chain event logging for every executed proposal.
 - Stateless logic enabling milestone-based or time-locked funding (controlled by external governance, not the Treasury itself).
 
-> Governance logic SHALL be implemented externally. The Treasury contract SHALL enforce execution-only behavior and MUST NOT include proposal submission, vote tallying, or authorization mechanisms. This separation minimizes attack surface and supports modular DAO upgrades.
+Governance logic SHALL be implemented externally. The Treasury contract SHALL enforce execution-only behavior and MUST NOT include proposal submission, vote tallying, or authorization mechanisms. This separation minimizes attack surface and supports modular DAO upgrades.
+
+The Treasury contract does not assume the existence of a governance token. It supports modular integration with external governance systems that may use token voting, reputation-based models, or delegated authority (see ECIP-1113).
 
 #### Execution Control and Spam Mitigation
 
