--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -59,6 +59,9 @@ The DAO MUST implement the following core components:
 - **Voting Mechanism**:  
   All proposals SHALL undergo an on-chain vote. The initial implementation MAY support stake-based or hybrid voting models (e.g., staked ETC, veOLY, or quadratic schemes). No governance token SHALL exist at launch. Any token issuance MUST be proposed through the DAO and ratified via on-chain vote, with no premine or privileged allocation.
 
+- **Tokenless Governance at Launch**:  
+  Olympia DAO launches without a governance token. All governance functions — including proposal submission, voting, and execution — are modular and do not assume token issuance. This design ensures upgrade paths remain open while avoiding centralized token capture at genesis. See [ECIP-1111](https://ecips.ethereumclassic.org/ECIPs/ecip-1111) and [ECIP-1112](https://ecips.ethereumclassic.org/ECIPs/ecip-1112) for supporting rationale.
+
 - **Quorum and Approval Thresholds**:
   - A minimum quorum MUST be enforced to validate a proposal.
   - A configurable approval threshold (e.g., ≥60% "yes" votes) MUST be met for execution.
@@ -114,28 +117,7 @@ To mitigate centralization risk in the off-chain administrative interface (i.e.,
 
 These practices ensure public accountability and reduce the risk of governance capture or founder entrenchment.
 
-### Execution Timelock Example
-
-The DAO queues and executes proposals after a voting delay. Execution is programmatic and non-discretionary, ensuring the treasury cannot be manipulated or diverted.
-
-```solidity
-// On-chain: DAO timelock execution calling treasury
-function executeECFP(bytes32 proposalHash, address recipient, uint256 amount) external {
-    require(_isQueuedProposal(proposalHash), "Not queued or invalid");
-    OlympiaTreasury(treasuryAddress).release(proposalHash, recipient, amount);
-}
-
-// Off-chain: Hash generation reference (off-chain tooling)
-bytes32 proposalHash = keccak256(
-    abi.encodePacked(
-        ecfpId,        // Unique numeric ID
-        recipient,     // Target address
-        amount,        // ETC amount in wei
-        metadataCID,   // IPFS or Arweave content hash for proposal docs
-        block.chainid  // Replay protection
-    )
-);
-```
+A minimum of three multisig signers with distinct affiliations SHOULD be established at DAO launch, with additional signers onboarded gradually through community nomination and DAO approval. Signers SHALL be rotated periodically to mitigate long-term entrenchment. No signer SHALL possess unilateral authority or override privileges.
 
 ### Rationale
 
@@ -148,6 +130,8 @@ The Olympia DAO is structured around modularity, auditability, and future extens
 - **Governance Upgradeability**: Voting logic, quorum thresholds, or governance tokens MAY be added or modified via DAO proposals, enabling adaptation as the ecosystem matures.
 
 This approach minimizes complexity at deployment while preserving flexibility for future expansion.
+
+Olympia DAO's modular design aligns with ECIP-1111 and ECIP-1112 by enabling upgrades without altering protocol-layer components. This separation of governance logic from treasury logic ensures that voting models, proposal rules, and contract interfaces MAY evolve without affecting consensus security or client behavior.
 
 #### Addressing Historical Governance Gaps
 
@@ -380,6 +364,38 @@ All approved transactions MUST emit a `ProposalExecuted` event from both the DAO
 All smart contracts SHALL be open-source and audited before mainnet deployment. A testnet deployment on Mordor will be used for validation of contract behavior, proposal flow, voting integrity, and treasury execution logic.
 
 Initial governance parameters MAY be conservative by default and subject to revision via governance vote after deployment.
+
+Treasury disbursements SHALL use deterministic proposal hashes for release validation. These hashes bind off-chain metadata (e.g., IPFS or Arweave CID) to an immutable execution payload. The DAO SHALL invoke `release()` or `execute()` on the Treasury only after the proposal hash and voting result are validated. This ensures BASEFEE revenue is disbursed according to verified DAO decisions with no discretionary modification.
+
+#### Execution Timelock: On-Chain DAO Call
+
+The DAO queues and executes proposals after a voting delay. Execution is programmatic and non-discretionary, ensuring the treasury cannot be manipulated or diverted.
+
+```solidity
+// On-chain: DAO timelock execution calling Treasury
+function executeECFP(
+    bytes32 proposalHash,
+    address recipient,
+    uint256 amount
+) external {
+    require(_isQueuedProposal(proposalHash), "Not queued or invalid");
+    OlympiaTreasury(treasuryAddress).release(proposalHash, recipient, amount);
+}
+```
+#### Proposal Hash Generation: Off-Chain Tooling
+
+```solidity
+// Off-chain: Hash generation reference (used before proposal submission)
+bytes32 proposalHash = keccak256(
+    abi.encodePacked(
+        ecfpId,        // Unique numeric ID
+        recipient,     // Target address
+        amount,        // ETC amount in wei
+        metadataCID,   // IPFS or Arweave content hash for proposal docs
+        block.chainid  // Replay protection
+    )
+);
+```
 
 ### Legal Interface: Ethereum Classic DAO LLC
 
