--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -13,7 +13,7 @@ license: CC0-1.0
 
 ### Simple Summary
 
-This ECIP defines the Ethereum Classic Funding Proposal (ECFP) process: a standardized, permissionless mechanism for submitting and executing funding requests from the Olympia Treasury, governed by the Olympia DAO. The ECFP format provides a reproducible structure for transparent and accountable allocation of protocol-level funds. The ECFP format enables developers, infrastructure operators, researchers, and ecosystem contributors to submit transparent, auditable proposals for on-chain funding. By formalizing a reproducible structure for submission, voting, and disbursement, this process ensures treasury allocations are accountable, equitable, and aligned with Ethereum Classic’s principles of decentralization and sustainability.
+This ECIP defines the Ethereum Classic Funding Proposal (ECFP) process: a standardized, permissionless mechanism for submitting and executing funding requests from the Olympia Treasury, governed by the Olympia DAO. The ECFP format provides a reproducible structure for transparent and accountable allocation of protocol-level funds. It enables developers, infrastructure operators, researchers, and ecosystem contributors to submit auditable proposals for on-chain funding. By formalizing a reproducible structure for submission, voting, and disbursement, this process ensures treasury allocations are accountable, equitable, and aligned with Ethereum Classic’s principles of decentralization and sustainability.
 
 ### Abstract
 
@@ -21,7 +21,7 @@ This ECIP formalizes the Ethereum Classic Funding Proposal (ECFP) process as the
 
 Each ECFP includes a clearly scoped problem statement, deliverables, funding amount, recipient(s), disbursement schedule, and success criteria. Proposals undergo community discussion, on-chain voting, and time-locked execution upon approval.
 
-By standardizing submission and governance workflows, the ECFP format ensures fair, accountable, and sustainable allocation of treasury funds toward core development, infrastructure, and ecosystem growth.
+By standardizing submission and governance workflows, the ECFP format ensures fair, accountable, and sustainable allocation of treasury funds toward core development, infrastructure, and ecosystem growth. Execution of approved proposals MAY involve administrative or fiat-handling support via the Ethereum Classic DAO LLC, which operates under on-chain instructions without discretionary authority.
 
 ### Motivation
 
@@ -32,7 +32,7 @@ With the activation of the Olympia Treasury (ECIP-1112) and the governance syste
 The Ethereum Classic Funding Proposal (ECFP) process addresses this need by:
 
 - **Defining a transparent proposal lifecycle** — from submission to voting to execution.
-- **Supporting open participation** — any contributor may submit proposals, regardless of affiliation.
+- **Supporting open participation** — any contributor MAY submit proposals, regardless of affiliation.
 - **Improving accountability** — all proposal data and voting outcomes are recorded on-chain.
 - **Streamlining governance** — standardized formats reduce review complexity and decision fatigue.
 - **Preserving institutional knowledge** — all proposals, regardless of outcome, remain publicly archived on-chain and in content-addressed storage for long-term accessibility.
@@ -85,14 +85,15 @@ The Ethereum Classic Funding Proposal (ECFP) process defines a standardized, on-
 
    ```solidity
    // On-chain: DAO execution of approved ECFP via Treasury
+   // MUST be called only by authorized governance executor
    function executeECFP(
       uint256 ecfpId,
       bytes32 proposalHash,
       address recipient,
       uint256 amount
    ) external {
-      require(isApproved(ecfpId), "ECFP not approved");
-      OlympiaTreasury(treasuryAddress).release(proposalHash, recipient, amount);
+      require(isApproved(ecfpId), "ECFP not approved"); // Governance approval check
+      OlympiaTreasury(treasuryAddress).release(proposalHash, recipient, amount); // Funds released
    }
    ```
 
@@ -126,7 +127,8 @@ To maintain resilience and openness, the following mitigations MAY be enforced b
   - All ECFPs MUST conform to a standardized template and embed a verifiable content hash (e.g., IPFS CID, Arweave digest) to ensure metadata immutability and auditability.
 
 - **Voting Model Upgradeability**  
-  - The DAO MAY adopt new voting mechanisms (e.g., quadratic voting, reputation scoring) via governance vote.
+  - The DAO MAY upgrade the voting system through governance, including adopting non-token-based models such as quadratic voting, identity-verified voting, or soulbound token schemes. These upgrades MUST follow the standard ECFP governance path.
+
 
 #### Governance Scope
 
@@ -194,7 +196,7 @@ By codifying a simple but extensible framework, ETC avoids the need for discreti
 The ECFP process formalizes a community-controlled mechanism for allocating protocol-level funds from the Olympia Treasury (ECIP-1112) under the governance of Olympia DAO (ECIP-1113). It ensures that public goods funding is:
 
 - **Transparent** — All proposals, votes, and disbursements are recorded immutably on-chain.
-- **Inclusive** — Any contributor may submit a proposal without requiring prior affiliation or political capital.
+- **Inclusive** — Any contributor MAY submit a proposal without requiring prior affiliation or political capital.
 - **Predictable** — Proposal structure and lifecycle are standardized, reducing ambiguity for both proposers and voters.
 - **Upgradeable** — The process is governance-agnostic and supports modular upgrades to DAO architecture, voting logic, and funding workflows.
 
@@ -207,7 +209,7 @@ The ECFP process formalizes a community-controlled mechanism for allocating prot
   All actions — from proposal submission to treasury execution — are verifiable on-chain and available for public inspection.
 
 - **Openness and Meritocracy**  
-  Anyone may participate. Access is not gated by token holdings, off-chain influence, or pre-approval.
+  Anyone MAY participate. Access is not gated by token holdings, off-chain influence, or pre-approval.
 
 - **Governance Modularity**  
   The ECFP format is defined independently of DAO implementation. Changes to governance architecture do not affect the funding process itself.
@@ -303,14 +305,15 @@ function submitECFP(
 - Each transaction MUST include the relevant ECFP ID and metadata hash to ensure auditability.
 
 ```solidity
-// Treasury emits metadata-bound disbursement event
-event ProposalExecuted(
-    uint256 ecfpId,
-    address indexed recipient,
-    uint256 amount,
-    bytes32 proposalHash,
-    uint256 blockNumber,
-    uint256 timestamp
+// Off-chain: Generate ECFP proposal hash for on-chain binding
+bytes32 proposalHash = keccak256(
+    abi.encodePacked(
+        ecfpId,        // Unique proposal ID (e.g., 0042)
+        recipient,     // Destination address
+        amount,        // Funding amount in wei
+        metadataCID,   // Content hash from IPFS or Arweave
+        block.chainid  // Replay protection domain separator
+    )
 );
 ```
 
@@ -360,7 +363,7 @@ The Ethereum Classic Funding Proposal (ECFP) process is implemented entirely at 
   Nodes that implement ECIP-1111 through ECIP-1114 will remain in consensus. Clients that do not support these ECIPs will fork from the canonical chain.
 
 - **Treasury Execution Requirements**:  
-  To process disbursements, clients must support the deployed Olympia Treasury (ECIP-1112) and Olympia DAO (ECIP-1113) contracts. These contracts are required to validate ECFP-based execution flows.
+  To process disbursements, clients MUST support the deployed Olympia Treasury (ECIP-1112) and Olympia DAO (ECIP-1113) contracts. These contracts are required to validate ECFP-based execution flows.
 
 - **State and Data Integrity**:  
   Because the system is fully encapsulated within verified smart contracts, the ECFP process introduces no risk to prior blockchain state or application-level data.
@@ -369,7 +372,7 @@ This separation between governance-layer logic and protocol consensus ensures th
 
 ### Security Considerations
 
-While ECIP-1114 introduces no changes to Ethereum Classic's consensus or EVM behavior, it defines a critical application-layer funding mechanism that must be secure, auditable, and resilient. The following categories outline key security properties and safeguards.
+While ECIP-1114 introduces no changes to Ethereum Classic's consensus or EVM behavior, it defines a critical application-layer funding mechanism that MUST be secure, auditable, and resilient. The following categories outline key security properties and safeguards.
 
 #### 1. Metadata and Proposal Integrity
 
@@ -481,13 +484,12 @@ Copyright and related rights waived via
 
 Several EVM-compatible networks have successfully implemented DAO-based treasury funding mechanisms. These examples validate the viability, scalability, and security of the ECFP model adopted in ECIP-1114:
 
-| Network       | Treasury Mechanism                     | Governance Model         | Notes                                                             |
-|---------------|-----------------------------------------|---------------------------|-------------------------------------------------------------------|
-| Ronin         | `BASEFEE` redirected to treasury        | Ronin DAO (Snapshot + Multisig) | Funds infrastructure, staking rewards, community grants           |
-| Celo          | Gas fees routed to a fee handler contract | On-chain proposals via Celo Governance | Supports public goods, validator incentives, and community funds |
-| Mantle        | Modular treasury from L2 revenue        | Mantle Governance         | Used to fund ecosystem growth and dev tooling                    |
-| Optimism      | Retroactive Public Goods Funding (RPGF) | Token House + Citizens House | Distributes funds retroactively for high-impact contributions     |
-| Arbitrum      | AIP process for grant disbursements     | Arbitrum DAO              | $ARB used for voting; all disbursements on-chain and verifiable   |
+| Network   | Treasury Mechanism                       | Governance Model                | Notes                                                           |
+|-----------|-------------------------------------------|----------------------------------|-----------------------------------------------------------------|
+| Ronin     | `BASEFEE` redirected to treasury          | Ronin DAO (Snapshot + Multisig) | Funds infra, staking rewards, and grants                        |
+| Celo      | Gas fees to DAO-controlled fee handler    | Celo Governance                 | Funds validators, public goods, and ecosystem tools             |
+| Mantle    | Modular treasury from rollup sequencer    | Mantle Governance               | Supports dev tooling and growth incentives                      |
+| Optimism  | Retroactive Public Goods Funding (RPGF)   | Token House + Citizens House    | Retro funds for impact-based contributors                       |
+| Arbitrum  | AIP grant disbursement process            | Arbitrum DAO                    | $ARB holders vote on treasury grants                            |
 
 These precedents support the security and feasibility of the Ethereum Classic Funding Proposal (ECFP) system. ECIP-1114 builds on their lessons while tailoring the process to Ethereum Classic's values of decentralization, transparency, and immutability.
-
