Cross-Linking ECIPs 1111–1114
Cross-Linking ECIPs 1111–1114

--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -366,6 +366,13 @@ The Olympia Upgrade introduces no new consensus-critical vulnerabilities beyond 
 
 The Olympia Upgrade applies well-established EVM upgrades and adds a consensus-level redirect of `BASEFEE` to a transparent, auditable treasury. It preserves all EVM guarantees, introduces no new opcodes or runtime changes, and maintains strict isolation between protocol consensus and governance execution. With comprehensive testnet validation and multi-client alignment, the upgrade strengthens Ethereum Classic’s security while enabling sustainable development funding.
 
+### Related ECIPs in the Olympia Upgrade
+
+- [ECIP-1111: Olympia EVM and Protocol Upgrades](https://ecips.ethereumclassic.org/ECIPs/ecip-1111)
+- [ECIP-1112: Olympia Treasury Contract](https://ecips.ethereumclassic.org/ECIPs/ecip-1112)
+- [ECIP-1113: Olympia DAO Governance Framework](https://ecips.ethereumclassic.org/ECIPs/ecip-1113)
+- [ECIP-1114: Ethereum Classic Funding Proposal Process](https://ecips.ethereumclassic.org/ECIPs/ecip-1114)
+
 ### Copyright
 
 Copyright and related rights waived via  
