--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -435,6 +435,13 @@ The Olympia Treasury contract introduces consensus-layer logic to redirect the `
 
 The Olympia Treasury is implemented as an immutable, governance-isolated vault. Its design prevents unauthorized access, minimizes runtime complexity, and enforces consensus correctness. Through external audits, formal verification, and testnet validation, the implementation provides a secure foundation for decentralized, on-chain funding of Ethereum Classic public goods.
 
+### Related ECIPs in the Olympia Upgrade
+
+- [ECIP-1111: Olympia EVM and Protocol Upgrades](https://ecips.ethereumclassic.org/ECIPs/ecip-1111)
+- [ECIP-1112: Olympia Treasury Contract](https://ecips.ethereumclassic.org/ECIPs/ecip-1112)
+- [ECIP-1113: Olympia DAO Governance Framework](https://ecips.ethereumclassic.org/ECIPs/ecip-1113)
+- [ECIP-1114: Ethereum Classic Funding Proposal Process](https://ecips.ethereumclassic.org/ECIPs/ecip-1114)
+
 ### Copyright
 
 Copyright and related rights waived via  
