--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -564,6 +564,13 @@ The Olympia DAO and Olympia Treasury contracts are designed with a strong emphas
 
 The Olympia DAO and Treasury architecture applies strict boundaries between components, disables all non-governance access paths, and adopts industry-standard audit and test practices. These safeguards mitigate both technical and governance-layer risks, enabling secure, decentralized treasury management on Ethereum Classic.
 
+### Related ECIPs in the Olympia Upgrade
+
+- [ECIP-1111: Olympia EVM and Protocol Upgrades](https://ecips.ethereumclassic.org/ECIPs/ecip-1111)
+- [ECIP-1112: Olympia Treasury Contract](https://ecips.ethereumclassic.org/ECIPs/ecip-1112)
+- [ECIP-1113: Olympia DAO Governance Framework](https://ecips.ethereumclassic.org/ECIPs/ecip-1113)
+- [ECIP-1114: Ethereum Classic Funding Proposal Process](https://ecips.ethereumclassic.org/ECIPs/ecip-1114)
+
 ### Copyright
 
 Copyright and related rights waived via  
