--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -475,6 +475,13 @@ ECIP-1114 defines a secure, transparent, and upgradeable framework for treasury 
 
 The full system MUST be tested on Mordor Testnet, reviewed through public audits, and verified for correctness prior to mainnet deployment.
 
+### Related ECIPs in the Olympia Upgrade
+
+- [ECIP-1111: Olympia EVM and Protocol Upgrades](https://ecips.ethereumclassic.org/ECIPs/ecip-1111)
+- [ECIP-1112: Olympia Treasury Contract](https://ecips.ethereumclassic.org/ECIPs/ecip-1112)
+- [ECIP-1113: Olympia DAO Governance Framework](https://ecips.ethereumclassic.org/ECIPs/ecip-1113)
+- [ECIP-1114: Ethereum Classic Funding Proposal Process](https://ecips.ethereumclassic.org/ECIPs/ecip-1114)
+
 ### Copyright
 
 Copyright and related rights waived via  
